package ethanmmd.mastermind.models;

public enum Error {
	DUPLICATED,
	WRONG_CHARACTERS,
	WRONG_LENGTH;
	
}
